# django_weather_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yml  manage.py  pyproject.toml  server.py  tailwind.config.js  tailwind.css
client/: apps.py  logging.py  urls.py  views.py
client/management/commands/: dev.py  prepod.py  preprod.py  prod.py  pytest.py
config/: asgi.py  middleware.py  settings.py  storage.py  urls.py  wsgi.py
config/settings/: _base.py  development.py  production.py  staging.py
config/templatetags/: filters.py
fixtures/: cities.json
server/: api.py  apps.py  middleware.py  openmeteo.py  tests.py  urls.py  views.py
server/migrations/: 0001_initial.py
static/css/: styles.css
static/js/: forecast_icons.js  security.js
staticfiles/CACHE/: manifest.json
staticfiles/CACHE/css/: base.513afdf2659b.css
staticfiles/CACHE/js/: body.65309b5785a3.js  vendored.3ffeb7f4fa68.js  vendored.b81f1a310f77.js
staticfiles/css/: styles.css
staticfiles/js/: forecast_icons.js  search.js
templates/: index.html
templates/components/: air_conditions.html  auth.html  base.html  city_info.html  search.html  weather.html
templates/components/auth/: login.html
templates/components/forecast/: daily.html  hourly.html
templates/components/sidebar/: button.html  main.html
users/: urls.py  views.py
users/migrations/: 0001_initial.py
