[project]
name = "django-weather-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "django-filter>=24.3",
    "django-cotton>=1.5.1",
    "django-ninja>=1.3.0",
    "colorlog>=6.9.0",
    "aiohttp>=3.11.11",
    "daphne>=4.1.2",
    "channels>=4.2.0",
    "requests>=2.32.3",
    "django-htmx>=1.21.0",
    "aiocache[memcached]>=0.12.3",
    "pymemcache>=4.0.0",
    "django-environ>=0.12.0",
    "loguru>=0.7.3",
    "django-compressor>=4.5.1",
    "whitenoise[brotli]>=6.8.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
    "faker>=33.3.1",
    "pytest-django>=4.9.0",
    "pytest-asyncio>=0.25.2",
]

[too.uv]
default-groups =  ["dev"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.production"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
